Guardando cambios en Mision y Estilo

--- a/mision.html
+++ b/mision.html
@@ -16,7 +16,21 @@
             </ul>
         </nav>
     </header>
+     
+   <h1>MISSION</h1>
+   <div class = "mision"><p>Our mission is to inspire people to stand firm in their values, acting with courage, truth, and
+     respect for others. We aim to create a space where inner strength, integrity, and purpose guide 
+     individuals through everyday challenges while promoting the common good.Our mission is to inspire 
+     people to stand firm in their values, acting with courage, truth, and respect for others. 
+     We aim to create a space where inner strength, integrity, and purpose guide individuals through 
+     everyday challenges while promoting the common good.
+    </p>
+    </div>
+<img src="Imagenes/mundial.jpg" alt="">
 
 
+<footer>
+        &copy; 2025. Universidad Mariana. Cloud Computing I.
+    </footer>
     
 </html>
