Cambios en nombre Index a index

--- a/mision.html
+++ b/mision.html
@@ -10,7 +10,7 @@
         <div class = "logoHeader"><img src="Imagenes/logoPrincipal.png" alt="Logo Principal"></div>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="mision.html">Mision</a></li>
                 <li><a href="vision.html">Vision</a></li>
             </ul>
