Cambios finales guardados.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         that guides us through the darkness. Join us in this holy war
         , and together we will bring hope to those who have lost their way
         and defend the truth against the forces of evil.
+
+        Join us, and let your light shine in the darkness.
         </p> 
 
         <h2>OATH OF THE WARRIOR OF LIGHT</h2>
