--- a/vision.html
+++ b/vision.html
@@ -24,7 +24,7 @@
   </header>
 
   
-  <h1>OUR VISION</h1>
+  <h1>OUR VISSION</h1>
 
   <p>Our vision is to reignite the divine flame within every soul, so that even in times of darkness, faith continues to shine. We believe that through unity and courage, humanity can rediscover true hope.</p>
 
